[gd_scene load_steps=4 format=2]

[ext_resource path="res://slimeSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/art/png/hill_short.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="slimeSpawner" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 7.62939e-06, 7.62939e-06 )
scale = Vector2( 16, 16 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
